--- a/_modules/thetis/configuration.html
+++ b/_modules/thetis/configuration.html
@@ -4,15 +4,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>thetis.configuration &#8212; Thetis 0+untagged.1565.gce988c6 documentation</title>
-    <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>thetis.configuration &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script src="../../_static/language_data.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -259,7 +259,6 @@
 
 <div class="viewcode-block" id="PETScSolverParameters"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.PETScSolverParameters">[docs]</a><span class="k">class</span> <span class="nc">PETScSolverParameters</span><span class="p">(</span><span class="n">Dict</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;PETSc solver options dictionary&quot;&quot;&quot;</span>
-    <span class="n">default_value</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">info_text</span> <span class="o">=</span> <span class="s1">&#39;a PETSc solver options dictionary&#39;</span>
 
 <div class="viewcode-block" id="PETScSolverParameters.validate"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.PETScSolverParameters.validate">[docs]</a>    <span class="k">def</span> <span class="nf">validate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">obj</span><span class="p">,</span> <span class="n">value</span><span class="p">):</span>
@@ -386,8 +385,8 @@
         <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">name_trait</span><span class="p">,</span> <span class="s1">&#39;default_value&#39;</span><span class="p">)</span> <span class="ow">and</span> <span class="n">name_trait</span><span class="o">.</span><span class="n">default_value</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">name_trait</span><span class="o">.</span><span class="n">paired_defaults</span><span class="p">[</span><span class="n">name_trait</span><span class="o">.</span><span class="n">default_value</span><span class="p">]()</span>
 
-    <span class="n">obs_handler</span> <span class="o">=</span> <span class="n">ObserveHandler</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;change&quot;</span><span class="p">)</span>
-    <span class="n">def_handler</span> <span class="o">=</span> <span class="n">DefaultHandler</span><span class="p">(</span><span class="n">name_trait</span><span class="o">.</span><span class="n">paired_name</span><span class="p">)</span>
+    <span class="n">obs_handler</span> <span class="o">=</span> <span class="n">observe</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;change&quot;</span><span class="p">)</span>
+    <span class="n">def_handler</span> <span class="o">=</span> <span class="n">default</span><span class="p">(</span><span class="n">name_trait</span><span class="o">.</span><span class="n">paired_name</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="nf">update_class</span><span class="p">(</span><span class="bp">cls</span><span class="p">):</span>
         <span class="s2">&quot;Programmatically update the class&quot;</span>
@@ -406,6 +405,7 @@
     <span class="k">return</span> <span class="n">update_class</span></div>
 </pre></div>
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -414,7 +414,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
     </div>
   </body>
 </html>
