--- a/_modules/index.html
+++ b/_modules/index.html
@@ -4,15 +4,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1565.gce988c6 documentation</title>
-    <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Overview: module code &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script src="../_static/jquery.js"></script>
     <script src="../_static/underscore.js"></script>
     <script src="../_static/doctools.js"></script>
-    <script src="../_static/language_data.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
 <!--[if lte IE 6]>
@@ -63,6 +63,7 @@
 <li><a href="thetis/coupled_timeintegrator.html">thetis.coupled_timeintegrator</a></li>
 <li><a href="thetis/coupled_timeintegrator_2d.html">thetis.coupled_timeintegrator_2d</a></li>
 <li><a href="thetis/equation.html">thetis.equation</a></li>
+<li><a href="thetis/exner_eq.html">thetis.exner_eq</a></li>
 <li><a href="thetis/exporter.html">thetis.exporter</a></li>
 <li><a href="thetis/forcing.html">thetis.forcing</a></li>
 <li><a href="thetis/implicitexplicit.html">thetis.implicitexplicit</a></li>
@@ -72,6 +73,8 @@
 <li><a href="thetis/optimisation.html">thetis.optimisation</a></li>
 <li><a href="thetis/options.html">thetis.options</a></li>
 <li><a href="thetis/rungekutta.html">thetis.rungekutta</a></li>
+<li><a href="thetis/sediment_eq_2d.html">thetis.sediment_eq_2d</a></li>
+<li><a href="thetis/sediment_model.html">thetis.sediment_model</a></li>
 <li><a href="thetis/shallowwater_eq.html">thetis.shallowwater_eq</a></li>
 <li><a href="thetis/solver.html">thetis.solver</a></li>
 <li><a href="thetis/solver2d.html">thetis.solver2d</a></li>
@@ -86,6 +89,7 @@
 <li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
 </ul>
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -94,7 +98,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
     </div>
   </body>
 </html>
