--- a/animationgrid.html
+++ b/animationgrid.html
@@ -4,15 +4,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1565.gce988c6 documentation</title>
-    <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/language_data.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
 <!--[if lte IE 6]>
@@ -54,12 +54,12 @@
             
   <table class="docutils align-default">
 <colgroup>
-<col style="width: 52%" />
-<col style="width: 48%" />
+<col style="width: 49%" />
+<col style="width: 51%" />
 </colgroup>
 <tbody>
 <tr class="row-odd"><td><p><iframe width="415" height="276" src="https://www.youtube.com/embed/K6ggbbfVWpc?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></p></td>
-<td><p><iframe width="415" height="276" src="https://www.youtube.com/embed/CO4ijMd4hzg?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></p></td>
+<td><p><iframe width="415" height="276" src="https://www.youtube.com/embed/5_0_uXsfP9s?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></p></td>
 </tr>
 <tr class="row-even"><td><p><iframe width="415" height="276" src="https://www.youtube.com/embed/84LAhSGNgMQ?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></p></td>
 <td><p><iframe width="415" height="276" src="https://www.youtube.com/embed/k2lLrdzbY54?modestbranding=1&controls=1&rel=0" frameborder="0" allowfullscreen></iframe></p></td>
@@ -68,6 +68,7 @@
 </table>
 
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -76,7 +77,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
     </div>
   </body>
 </html>
